--- a/submission.html
+++ b/submission.html
@@ -10,7 +10,7 @@
 	<body>
 		<section class="overlay">
 		<h1 id=message></h1>
-		<a href="index.html">Go to Home Page</a>
+		<a href="home.html">Go to Home Page</a>
 		</section>
 	</body>
 </html>
