--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oswald">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato: 100,300,400,700|Luckiest+Guy|Oxygen:300,400">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik">
+		<link rel="stylesheet" href="https://use.typekit.net/slh0hod.css">
     </head>
 	
 	
@@ -40,7 +41,6 @@
 			
 			
 			<div class="center banner">
-				<img id="legends" src="./resources/images/legends.png" alt="">
 				<p>Welcome to Legends&#8482;. Everything you want to know about Legends is right here!</p>
 			</div>
 			<div class="quickaccessandsearch">
@@ -70,15 +70,18 @@
 				<br>
 
 				<strong><blockquote class="center">Our Legends</blockquote></strong>
-				<article>
-					<span class="center">Dipu<a id="Dipu"></a></span>
+				<article class="Birra2">
+					<h2 class="center">Dipu<a id="Dipu"></a></h2>
 					<p>Meet Dipu, our first legend. He lives in Jatrabari. He was born on 20<sup>th</sup> September 1900. He likes to drink H<sub>2</sub>O.
 					<br>
 
 					His favourite dialogs are-
 						<ul class="list1">
 							<li class="list-style-square"> Exactly! </li>
-							<li class="list-style-square"> JA VAG!  </li>
+							<li class="list-style-square"> Ja Vag!  </li>
+							<li class="list-style-square"> Now What  </li>
+							<li class="list-style-square"> XDD  </li>
+							<li class="list-style-square"> Reduced to atom  </li>
 						</ul>
 					<figure class="center">
 						<img alt="Dipu eating something (he told me what it was but i forgot XD)" src="./resources/images/dipu.jpg" title="Dipu eating something (he told me what it was but i forgot XD) " width="50%" height="50%">
@@ -89,12 +92,12 @@
 					<br>
 					
 					<aside>
-						Follow Him on&nbsp;&nbsp;<a href="https://www.facebook.com/jafran.muqtadir.7" target="_blank" class="external-link">Facebook</a>
+						Follow Him on&nbsp;&nbsp;<a href="https://www.facebook.com/numanzamandipuu" target="_blank" class="external-link">Facebook</a>
 				    </aside>
 					</p>
 				</article>
-				<article>
-					<h2 class="center">Shajib<a id="Shajib"></a> </h2>
+				<article class="Birra2">
+					<h2 class="center">Shajib<a id="Shajib"></a></h2>
 					<p>Meet Shajib, our second legend. He lives in Banasree.He was born on 20<sup>th</sup> September 1900. He likes to drink CO<sub>2</sub>.
 					<br>
 
@@ -103,6 +106,8 @@
 							<li> Birds </li>
 							<li> Rats </li>
 						</ol>
+
+						
 					<figure class="center">
 						<img alt="Shajib the BOSS 😎" src="./resources/images/shajib.jpg" title="Shajib the BOSS 😎" width="50%" height="50%">
 						<figcaption>Shajib the BOSS 😎</figcaption>
@@ -149,16 +154,6 @@
 			<br>
 			<br>
 
-            <h3 class="center uppercase">Dipu's Story</h3>
-			<br>
-			
-	        <figure class="center">
-				<audio controls>
-					<source src="https://www.mboxdrive.com/dipu-s.mp3" type="audio/mp3">Your browser does not support the <code>audio</code> element.
-				</audio>
-				<figcaption>The Forgotten Story</figcaption>
-			</figure>
-			<br>
 			
 	        <h3 class="center uppercase">A Brown Bear</h3>
 			<br>
