Update home to add repaint button

--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 		
         <main>
 			<section>
-				<em>Legends</em> will always be&nbsp;&nbsp;&nbsp;<strong>LEGENDS!</strong>
+				<h1><em>Legends</em> will always be&nbsp;&nbsp;&nbsp;<strong>LEGENDS!</strong></h1>
 				<p class="quote">Babe Ruth once stated, “Heroes get remembered, but legends never die.”</p>
 				<br>
 				<br>
@@ -272,6 +272,29 @@
 				<br>
 				  
 	        </section>
+			<br>
+			<br>
+
+			<section class="center">
+				<button onmouseover="changeColor()">Repaint!</button>
+
+				<script>
+					function getRandomColor(){
+					let letters = '0123456789ABCDEF';
+					let color = '#';
+					for (let i = 0; i < 6; i++) {
+						color += letters[Math.floor(Math.random() * 16)];
+					}
+					return color;
+					}
+					function changeColor(){
+					let newColor = getRandomColor();
+					document.body.style.backgroundColor = newColor;
+					}
+				</script>
+			</section>
+			
+
 	    </main>
 
 
